--- a/my-project/package.json
+++ b/my-project/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng4-click-outside": "^1.0.1",
+    "ngx-image-cropper": "^1.2.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
