--- a/my-project/package.json
+++ b/my-project/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "ng4-click-outside": "^1.0.1",
     "ngx-image-cropper": "^1.2.2",
     "rxjs": "~6.2.0",
