--- a/my-project/angular.json
+++ b/my-project/angular.json
@@ -20,7 +20,9 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/firebase-messaging-sw.js",
+               "src/manifest.json"
             ],
             "styles": [
               {
@@ -135,4 +137,5 @@
       "styleext": "scss"
     }
   }
+
 }
