--- a/my-project/sonar-project.properties
+++ b/my-project/sonar-project.properties
@@ -1,13 +1,13 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=926aa26104339a021cfe2d1dceebed984ba9bba8
+sonar.projectKey=507a7c92397910932bd3b9042a050599fbd5cf71
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=my-project
+sonar.projectName=fundooApp
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
-sonar.sources=src
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
+#sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**, log/**
