--- a/my-project/package.json
+++ b/my-project/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-froala-wysiwyg": "^2.9.1",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "froala-editor": "^2.9.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "ng4-click-outside": "^1.0.1",
